<resources>
    <string name="app_name">servii</string>
    <string name="servii">SERVii</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_phone_number_to_proceed">Enter your phone number to proceed</string>
    <string name="_10_digit_mobile_number">10 digit mobile number</string>
    <string name="_91">+91</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="create_a_password">Create a password</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="login_with_google">Login with Google</string>
    <string name="cont">CONTINUE</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="facebook_app_id">500334967414752</string>
    <string name="fb_login_protocol_scheme">fb500334967414752</string>
    <string name="home">Home</string>

</resources>
