<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login_ne6"
        android:layout_alignLeft="@id/login_ne6"
        android:layout_marginTop="20dp"
        android:text="@string/_91"
        android:textColorHint="@color/colorAccent"
        android:textColorLink="@color/colorPrimary"
        android:ems="10"
        android:inputType="phone" />

    <Button
        android:id="@+id/login_continue"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/login_phone"
        android:layout_alignTop="@id/login_phone"
        android:layout_marginTop="75dp"
        android:background="@drawable/button"
        android:text="CONTINUE"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/login_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="85dp"
        android:layout_marginBottom="19dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/login_ne1"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:text="@string/servii"
        android:textSize="65sp"
        app:fontFamily="@font/cocogoose_trial" />

    <View
        android:id="@+id/login_ne2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@color/dark_grey" />

    <TextView
        android:id="@+id/login_ne3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login_signUp"
        android:layout_alignRight="@id/login_signUp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="19dp"
        android:text="Don't have an account?"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/login_ne4"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignTop="@id/login_ne7"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/login_ne5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login_ne4"
        android:layout_alignLeft="@id/login_ne4"
        android:layout_marginTop="50dp"
        android:text="@string/enter_your_phone_number_to_proceed"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/login_ne6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login_ne4"
        android:layout_alignLeft="@id/login_ne4"
        android:layout_marginTop="100dp"
        android:text="@string/_10_digit_mobile_number"
        android:textColor="@color/colorAccent" />

    <View
        android:id="@+id/login_ne7"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:background="@color/colorAccent" />


</RelativeLayout>